[package]
name = "joplin-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dirs = "5.0.0"
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.7"
regex = "1.7.3"
rust-embed = "6.6.1"
sqlite = "0.30.4"
