[package]
name = "joplin-mount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
headless_chrome = "1.0.5"
hex = "0.4"
itertools = "0.10"
lazy_static = "1"
markdown = "1.0.0-alpha.7"
regex = "1"
rust-embed = "6"
scopeguard = "1"
sqlite = "0.30"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
warp = "0.3"
